= Changelog

== v2022.7.0 (unreleased)

=== Dependency update

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/1169[#1169] [form] Add support for a form description editor

== v2022.5.0

=== Dependency update

- This version corresponds to https://github.com/eclipse-sirius/sirius-components/milestone/9[Sirius Components 2022.5.0].
See https://github.com/eclipse-sirius/sirius-components/blob/master/CHANGELOG.adoc#v202250[the corresponding release notes] for more details.

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/1165[#1165] [doc] Improve the pull request template
- https://github.com/eclipse-sirius/sirius-components/issues/699[699] [core] Reduce the usage of `RepresentationDescriptor` to the import/export