@@ -7,6 +7,7 @@
 === Improvements
 
 - https://github.com/eclipse-sirius/sirius-components/issues/1169[#1169] [form] Add support for a form description editor
+- https://github.com/eclipse-sirius/sirius-components/issues/1272[#1272] [form] Add support for Button widget in FormDescriptions
 
 == v2022.5.0
 
